samples/_failures_safe/1761500893_c12d6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea06ad39.c: In function ‘determinant_matrix’:
./samples/SAFE/__tmp_ea06ad39.c:148:1: error: expected declaration or statement at end of input
  148 | int determinant_matrix(int **matrix, int n) {
      | ^~~
